<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple"
        tools:ignore="MissingConstraints" />
    
    <ImageView
        android:id="@+id/ic_all"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ic_happy"
        android:src="@drawable/ic_infinit"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/ic_happy"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ic_sun"
        app:layout_constraintStart_toEndOf="@id/ic_all"
        android:src="@drawable/ic_happyface"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/ic_sun"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_happy"
        android:src="@drawable/ic_sun"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:fontFamily="@font/cabin"
        android:textColor="@color/black"
        android:text="@string/user_name"
        app:layout_constraintTop_toBottomOf="@id/ic_happy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_motivation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/cabin"
        android:textSize="22sp"
        android:text="@string/phrase_motivation"
        />

    <View
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/text_motivation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/cabin"
        android:text="@string/new_phrase"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>